Down to actual codacy issues

--- a/COVID_CO2_TRACKER/co2_client/src/index.css
+++ b/COVID_CO2_TRACKER/co2_client/src/index.css
@@ -18,6 +18,10 @@ body {
 
 code {
   font-family:
-   source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    source-code-pro,
+    Menlo,
+    Monaco,
+    Consolas,
+    'Courier New',
     monospace;
 }
